# Agente-ocupacional

./: .env.example  .gitignore  ARCHITECTURE.md  FILTERING_RULES.md  FIX_SETTINGS_ERROR.md  FRONTEND_SOLUTION.md  README.md  REFACTOR_SETTINGS_REPORT.md  USAGE_EXAMPLE.md  analyze_batch.py  consolidate_person.py  extract_azure_only.py  fix_settings_import.sh  generate_pdf.py  package-lock.json  pyproject.toml  refactor_settings.py  requirements.txt  test_architecture_verification.py  test_cie10_flexible.py  test_consolidado_simple.py  test_cross_validation.py  test_excel_export.py  test_filters.py  validate_all.sh  validate_ground_truth.py  validate_ground_truth_v2.py
backend/: .env.example  .gitignore  README.md  app.py  config.py  requirements.txt
backend/app/: __init__.py
config/empresas/: data.json  sve_catalog.json
config/prompts/: extraction_prompt.txt
config/schemas/: output_schema.json
frontend/: .env.example  README.md  index.html  lint-2025-11-17.txt  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ResultadosDemo.jsx  VisorDocumentosMedicos.tsx  index.css  vite-env.d.ts
src/: cli.py
src/config/: schemas.py  settings.py
src/exporters/: excel_exporter.py  json_exporter.py  pdf_exporter.py
src/extractors/: azure_extractor.py  base.py
src/processors/: alert_filters.py  claude_processor.py  ges_enricher.py  prompts.py  recommendation_filters.py  validators.py
src/utils/: helpers.py  logger.py
tests/: test_helpers.py  test_validators.py
(+68 files in other folders)
